<resources>
    <string name="app_name">Crypto App</string>
    <string name="access">Acessar</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_up_now">Criar nova conta</string>
    <string name="welcome">Bem vindo ao app crypto</string>
    <string name="onboarding_login">Acompanhe suas moedas favoritas</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="cpf">CPF</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="view">Visualizar:</string>
    <string name="all">todos</string>
    <string name="only_favorites">apenas favoritos</string>
    <string name="btc_description">Descricao sobre o bitcoin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="eth_description">Descricao sobre o etherium. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="sol_description">Descricao sobre o solana. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="bnd_description">Descricao sobre o binance. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="xrp_description">Descricao sobre o XRP. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="luna_description">Descricao sobre o terra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="avax_description">Descricao sobre o avalanche. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="ada_description">Descricao sobre o cardano. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="dai_description">Descricao sobre o dai. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="atom_description">Descricao sobre o cosmos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="doge_description">Descricao sobre o dogecoin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
    <string name="trx_description">Descricao sobre o trom. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempor ligula ac eros malesuada scelerisque. Vivamus tellus ligula, dignissim sit amet enim sed, mattis efficitur tellus. Etiam est libero, mollis vitae purus ac, accumsan congue orci. Cras non justo quis ipsum tempor pulvinar vel ut eros. In fermentum sem magna, sit amet pulvinar lectus rhoncus ut. Cras nec diam scelerisque odio euismod vestibulum. Phasellus feugiat justo vel molestie dapibus. Donec sit amet sem consequat libero porttitor tincidunt. Etiam volutpat consequat convallis. Nulla arcu dui, fermentum ac elementum quis, vestibulum vitae lectus. Vestibulum efficitur vehicula mi, eu vulputate dolor sollicitudin non. Vestibulum ullamcorper pharetra pulvinar. Nulla ultrices, dui sed interdum lacinia, ante nibh porta justo, quis mollis erat odio in mauris.</string>
</resources>