<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/background_color">

    <com.matheus.mota.cryptoapp.customView.AccessButton
        android:id="@+id/accessButton"
        android:layout_width="293dp"
        android:layout_height="44dp"
        app:button_text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPwdSignInEditText"
        android:layout_marginTop="40dp"
        />

    <com.matheus.mota.cryptoapp.customView.AccessEditText
        android:id="@+id/loginSignInEditText"
        android:layout_width="293dp"
        android:layout_height="44dp"
        app:change_hint="@string/login"
        app:inputType="text"
        app:is_password="false"
        app:layout_constraintBottom_toTopOf="@id/cpfSignInEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.matheus.mota.cryptoapp.customView.AccessEditText
        android:id="@+id/cpfSignInEditText"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:change_hint="@string/cpf"
        app:inputType="number"
        app:is_password="false"
        app:layout_constraintBottom_toTopOf="@id/passwordSignInEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSignInEditText" />

    <com.matheus.mota.cryptoapp.customView.AccessEditText
        android:id="@+id/passwordSignInEditText"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        app:change_hint="@string/password"
        app:inputType="textPassword"
        app:is_password="true"
        app:layout_constraintBottom_toTopOf="@+id/confirmPwdSignInEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpfSignInEditText" />

    <com.matheus.mota.cryptoapp.customView.AccessEditText
        android:id="@+id/confirmPwdSignInEditText"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        app:change_hint="@string/confirm_password"
        app:inputType="textPassword"
        app:is_password="true"
        app:layout_constraintBottom_toTopOf="@+id/accessButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignInEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>